--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 .idea
 .idea/*
-4/upload/image/*
-4/upload/pdf/*
-4/upload/thumbnails/*
-5/upload/pdf/*
-5/upload/image/*
-5/upload/thumbnails/*
+*/upload/*
